--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
         <div class="container">
             <h2 data-aos="fade-up">Resume</h2>
             <div class="resume-content">
-                <embed src="files/Resume.pdf" type="application/pdf" width="100%" height="600px" data-aos="fade-up">
+                <embed src="files/resume.pdf" type="application/pdf" width="100%" height="600px" data-aos="fade-up">
                 <a href="files/Resume.pdf" download class="btn resume-btn" data-aos="fade-up">Download Resume</a>
             </div>
         </div>
@@ -179,7 +179,7 @@
                     <label>
                     <textarea name="message" rows="5" placeholder="Your Message" required></textarea>
                     </label>
-  <!-- your other form fields go here -->
+  
                     <button type="submit">Send Message</button>
             </form>
             <div class="social-links" data-aos="fade-up" data-aos-delay="100">
